# ToDoList

./: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/core/: __init__.py  exceptions.py
app/crud/: __init__.py  task.py
app/models/: __init__.py  task.py
app/routers/: __init__.py  tasks.py
app/schemas/: __init__.py  task.py
tests/: test_tasks.py
